# LivenessChecker

./: CMakeLists.txt  Main.qml  imageprovider.cpp  imageprovider.h  livenessestimates.cpp  livenessestimates.h  main.cpp  qml_images.qrc  webcamcapture.cpp  webcamcapture.h
